--- a/src/app/header-login/header-login.component.html
+++ b/src/app/header-login/header-login.component.html
@@ -1,5 +1,5 @@
 <div id="header" class="header-login">
-  <div class="bottom-menu-wrapper">
+  <div class="bottom-menu-wrapper-login">
     <div class="wrapper">
       <div class="row">
         <div class="bg-logo">
