--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -85,20 +85,20 @@
                   <nav id="main-nav" class="main-nav">
                       <div id="menu" class="main-nav-list hidden-sm hidden-xs">
                           <ul id="bottom-main-nav" >
-                              <li id="mutual"><a href="/MutualFund" title="กองทุนรวม">กองทุนรวม <span class="icon"></span></a></li>
-                              <li id="private"><a href="/PrivateFund" title="กองทุนส่วนบุคคล">กองทุน<br />ส่วนบุคคล <span class="icon"></span></a></li>
-                              <li id="provident"><a href="/ProvidentFund" title="กองทุนสำรองเลี้ยงชีพ">กองทุน<br />สำรองเลี้ยงชีพ <span class="icon"></span></a></li>
-                              <li id="property"><a href="/PropertyFund" title="กองทุนรวมอสังหาริมทรัพย์ REIT">กองทุนรวม<br />อสังหาริมทรัพย์ REIT <span class="icon"></span></a></li>
-                              <li id="investor"><a href="/Investment" title="บริการนักลงทุน">บริการ<br />นักลงทุน <span class="icon"></span></a>
-                                  <ul>
+                              <li id="mutual"><a href="/MutualFund" title="My Port">My Port <span class="icon"></span></a></li>
+                              <li id="private"><a href="/PrivateFund" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
+                              <li id="provident"><a href="/ProvidentFund" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
+                              <li id="property"><a href="/PropertyFund" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
+                              <li id="investor"><a href="/Investment" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a>
+                                  <!-- <ul>
                                       <li><a href="#" title="">Sub Menu 1</a></li>
                                       <li><a href="#" title="">Sub Menu 2</a></li>
-                                  </ul>
+                                  </ul> -->
                               </li>
-                              <li id="news"><a href="/News" title="ข่าวสารและกิจกรรม">ข่าวสารและ<br />กิจกรรม <span class="icon"></span></a></li>
+                              <li id="news"><a href="/News" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
                           </ul>                           
                       </div>
-                      <div class="header-clicker">
+                      <!-- <div class="header-clicker">
                           <ul>
                               <li class="search popup">
                                   <a href="#" title="Search" class="icon-toggle"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -120,7 +120,7 @@
                                   </div>
                               </li>
                           </ul>
-                      </div>
+                      </div> -->
                   </nav>                    
                   <!-- end Nav -->
                   <a id="nav-expander" class="nav-expander fixed">
