--- a/src/assets/Content/default/sass/layout/_footer.scss
+++ b/src/assets/Content/default/sass/layout/_footer.scss
@@ -467,6 +467,8 @@
         color: $color-white;
         padding: 10px 0;
         overflow: hidden;
+        display: block;
+        background-color: #f5f5f5;
         
 
         .footer_sub--block {
