--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@
 /* @import "~assets/fonts/fonts"; */
 
 @import "/assets/Content/default/css/main.css";
+/* @import "/assets/Content/default/css/content/login.css"; */
+/* @import "/assets/Content/default/css/content/myport.css"; */
 /* @font-face {
     font-family: 'KitithadaRegular';
     src: url("/assets/fonts/PSL094PRO.eot");
