--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
+<div class="footer">
 <div class="footer_sub">
   <div class="container">
       <div class="row">
@@ -19,4 +20,5 @@
           </div>
       </div>
   </div>
+</div>
 </div>
