--- a/src/assets/Content/default/css/main.css
+++ b/src/assets/Content/default/css/main.css
@@ -4969,6 +4969,295 @@ input[type=reset] {
     @media screen and (max-width: 1199px) {
       #header .top-menu-wrapper .wrapper {
         padding: 0 10px; } }
+  #header .bottom-menu-wrapper-login {
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    border-bottom: 5px solid #1CA59B;
+    background-color: rgba(255, 255, 255, 0.8);
+    -webkit-box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.5); }
+    #header .bottom-menu-wrapper-login .wrapper {
+      max-width: 1328px;
+      padding: 0;
+      margin: 0 auto; }
+    #header .bottom-menu-wrapper-login .bg-logo {
+      background-color: #fff;
+      padding: 0 20px; }
+    #header .bottom-menu-wrapper-login .logo {
+      margin: 20px 0; }
+    #header .bottom-menu-wrapper-login .main-nav {
+      position: relative;
+      display: block;
+      width: auto; }
+      #header .bottom-menu-wrapper-login .main-nav .main-nav-list {
+        float: left;
+        width: auto;
+        height: auto;
+        padding: 0;
+        margin: 0;
+        margin-right: 15px;
+        /*.sub-hover-menu {
+                    position: absolute;
+                    top: 48px;
+                    left: 0px;
+                    width: 100%;
+                    padding: 30px 0;
+                    display: none;
+                    background-color: #000;
+                    background-repeat: repeat;
+
+                    .all-lnk {
+                        border: 1px solid #808080;
+                        border-radius: 0;
+                        color: white;
+                        cursor: pointer;
+                        
+                        font-size: $text-large;
+                        height: auto;
+                        margin: 0 auto;
+                        padding: 10px;
+                        width: auto;
+                        display: inline-block;
+
+                        &:hover {
+                            border: 1px solid #808080;
+                        }
+                    }
+                }*/ }
+        #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul {
+          list-style: none;
+          padding: 0;
+          margin: 0; }
+          #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li {
+            float: left;
+            position: relative;
+            display: block;
+            width: auto;
+            height: auto;
+            padding: 0;
+            margin: 0; }
+            #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li a {
+              display: block;
+              height: 95px;
+              padding: 25px 14px 0 14px;
+              font-size: 26px;
+              line-height: 24px;
+              text-transform: capitalize;
+              color: #1CA59B;
+              border-right: 1px solid #f5f5f5; }
+              #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li a:hover {
+                color: #fff;
+                /*background-color: $color-primary;*/
+                background: #1ca59b;
+                background: transparent\9;
+                background: rgba(28, 165, 155, 0.75); }
+              #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li a.current {
+                color: #fff;
+                /*border-right-color: $color-primary;*/
+                background-color: #1CA59B; }
+                #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li a.current:hover {
+                  color: #fff;
+                  background-color: #1CA59B; }
+            #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li ul {
+              list-style: none;
+              opacity: 0;
+              position: absolute;
+              top: 150%;
+              left: 0;
+              visibility: hidden;
+              -o-transition: all .3s ease;
+              transition: all .3s ease;
+              -webkit-transition: all .3s ease;
+              z-index: 999;
+              background-color: #fff;
+              -webkit-box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.75);
+              -moz-box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.75);
+              box-shadow: 0px 3px 3px 0px rgba(50, 50, 50, 0.75); }
+              #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li ul li a {
+                display: block;
+                height: auto;
+                padding: 0 15px;
+                border-right: none; }
+            #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li:hover > ul {
+              opacity: 1;
+              top: 100%;
+              visibility: visible;
+              background-color: transparent; }
+              #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li:hover > ul li {
+                float: none;
+                display: block;
+                width: 210px;
+                margin: 0; }
+                #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li:hover > ul li a {
+                  color: #5a5a5a;
+                  font-size: 22px;
+                  line-height: 24px;
+                  font-weight: normal;
+                  padding: 12px 15px;
+                  border-bottom: 0px solid transparent;
+                  text-align: left;
+                  background-image: none;
+                  background-color: rgba(255, 255, 255, 0.85); }
+                  #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li:hover > ul li a:hover {
+                    color: #fff;
+                    border-bottom: 0px solid transparent;
+                    background-image: none;
+                    background-color: #1CA59B; }
+                #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li:hover > ul li:last-child {
+                  margin-bottom: 0; }
+        @media screen and (max-width: 1199px) {
+          #header .bottom-menu-wrapper-login .main-nav .main-nav-list ul li a {
+            padding-left: 12px;
+            padding-right: 12px; } }
+      #header .bottom-menu-wrapper-login .main-nav .header-clicker {
+        float: left;
+        width: auto;
+        height: auto;
+        padding: 0;
+        margin: 0; }
+        #header .bottom-menu-wrapper-login .main-nav .header-clicker ul {
+          list-style: none;
+          padding: 0;
+          margin: 0; }
+          #header .bottom-menu-wrapper-login .main-nav .header-clicker ul > li {
+            float: left;
+            font-size: 24px;
+            line-height: 28px;
+            color: #1CA59B; }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul > li > a {
+              display: block;
+              height: 95px;
+              padding: 0;
+              font-size: 32px;
+              line-height: 95px;
+              text-align: center;
+              text-transform: capitalize;
+              color: #1CA59B;
+              -webkit-transition: all 0.2s ease-in-out;
+              -moz-transition: all 0.2s ease-in-out;
+              -o-transition: all 0.2s ease-in-out;
+              transition: all 0.2s ease-in-out; }
+          #header .bottom-menu-wrapper-login .main-nav .header-clicker ul li.popup {
+            position: relative; }
+          #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .icon-content {
+            position: absolute;
+            background: #fff;
+            min-width: 530px;
+            border: 1px solid #ccc;
+            right: -35px;
+            top: 100%;
+            opacity: 0;
+            z-index: -1;
+            text-align: center;
+            -webkit-transition: all 0.4s ease-in-out;
+            -moz-transition: all 0.4s ease-in-out;
+            -o-transition: all 0.4s ease-in-out;
+            transition: all 0.4s ease-in-out;
+            margin-top: 10px;
+            padding: 0;
+            visibility: hidden;
+            /*&:before {
+                            top: -15px;
+                            right: 37px;
+                            border: solid transparent;
+                            content: " ";
+                            height: 0;
+                            width: 0;
+                            position: absolute;
+                            pointer-events: none;
+                            border-color: rgba(232,229,232,0);
+                            border-bottom-color: #ccc;
+                            border-width: 7px;
+                            margin-left: -7px;
+                            -webkit-transition: all 0.2s ease-in-out;
+                            -moz-transition: all 0.2s ease-in-out;
+                            -o-transition: all 0.2s ease-in-out;
+                            -ms-transition: all 0.2s ease-in-out;
+                            transition: all 0.2s ease-in-out;
+                        }
+
+                        &:after {
+                            top: 0px;
+                            right: 37px;
+                            border: solid transparent;
+                            content: " ";
+                            height: 0;
+                            width: 0;
+                            position: absolute;
+                            pointer-events: none;
+                            border-color: rgba(232,229,232,0);
+                            border-bottom-color: #fff;
+                            border-width: 7px;
+                            margin-left: -7px;
+                        }*/ }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .icon-content .button-close {
+              color: #1CA59B;
+              position: absolute;
+              top: 10px;
+              right: 10px;
+              width: 14px;
+              height: 14px;
+              padding: 0;
+              text-indent: -9999px;
+              display: block;
+              border: none !important;
+              cursor: pointer;
+              opacity: 0.6;
+              -webkit-transition: all 0.2s ease-in-out;
+              -moz-transition: all 0.2s ease-in-out;
+              -o-transition: all 0.2s ease-in-out;
+              transition: all 0.2s ease-in-out;
+              background-image: url("/assets/Images/icons/close-dark.png");
+              background-repeat: no-repeat; }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .icon-content .button-close {
+              z-index: 20; }
+              #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .icon-content .button-close:hover {
+                opacity: 1; }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .icon-content #nav-search {
+              padding: 30px; }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .icon-content #nav-search h3 {
+              margin-bottom: 15px; }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .icon-content .btn-med {
+              display: block;
+              width: 100%;
+              margin: 0; }
+          #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .active .icon-content {
+            opacity: 1;
+            z-index: 200;
+            margin-top: 0;
+            visibility: visible;
+            overflow: visible !important; }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul .active .icon-content:after {
+              top: -14px; }
+        @media screen and (max-width: 999px) {
+          #header .bottom-menu-wrapper-login .main-nav .header-clicker {
+            float: right;
+            margin-right: 53px; }
+            #header .bottom-menu-wrapper-login .main-nav .header-clicker ul > li > a {
+              height: auto;
+              padding: 0px 15px 0px 15px;
+              /*font-size: $text-small;*/
+              line-height: 65px;
+              border-right: 1px solid #c0c0c0; } }
+        @media screen and (max-width: 767px) {
+          #header .bottom-menu-wrapper-login .main-nav .header-clicker ul > li > a {
+            font-size: 28px; } }
+    #header .bottom-menu-wrapper-login.fixed-top {
+      position: fixed;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: auto;
+      z-index: 99; }
+    @media screen and (max-width: 1199px) {
+      #header .bottom-menu-wrapper-login .wrapper {
+        padding: 0 10px; } }
+    @media screen and (max-width: 1199px) {
+      #header .bottom-menu-wrapper-login .logo {
+        margin: 5px 0; } }
   #header .bottom-menu-wrapper {
     display: block;
     width: 100%;
@@ -6218,6 +6507,36 @@ input[type=reset] {
         .page-content-wrapper .sidenav-left .open > .btn-primary.dropdown-toggle.focus {
           border-color: #cdcdcd;
           background-color: #cdcdcd; } }
+  .page-content-wrapper .icon-option {
+    text-align: right; }
+    .page-content-wrapper .icon-option ul {
+      display: inline-block;
+      list-style: none;
+      padding: 0;
+      margin: 0; }
+      .page-content-wrapper .icon-option ul li {
+        display: inline-block;
+        padding: 10px 10px;
+        margin: 0 5px; }
+        .page-content-wrapper .icon-option ul li a {
+          font-size: 22px;
+          line-height: 28px;
+          color: #fff; }
+          .page-content-wrapper .icon-option ul li a:hover {
+            color: #000;
+            text-decoration: none; }
+        .page-content-wrapper .icon-option ul li.current a {
+          color: #000; }
+          .page-content-wrapper .icon-option ul li.current a:hover {
+            color: #000;
+            text-decoration: none; }
+    @media screen and (max-width: 999px) {
+      .page-content-wrapper .icon-option {
+        text-align: left; }
+        .page-content-wrapper .icon-option ul {
+          float: left; }
+          .page-content-wrapper .icon-option ul.sw-lang {
+            float: right; } }
   .page-content-wrapper .article-right {
     display: block;
     min-height: 300px;
@@ -6534,6 +6853,16 @@ input[type=reset] {
       text-align: left;
       background-color: #1CA59B; }
       .page-content-wrapper .fund-list-wrapper .title-heading h3 {
+        margin: 0 auto;
+        font-size: 28px;
+        line-height: 28px;
+        color: #fff; }
+    .page-content-wrapper .fund-list-wrapper .title-heading-blue {
+      height: 90px;
+      padding: 20px;
+      text-align: left;
+      background-color: #293D69; }
+      .page-content-wrapper .fund-list-wrapper .title-heading-blue h3 {
         margin: 0 auto;
         font-size: 28px;
         line-height: 28px;
@@ -7905,7 +8234,9 @@ input[type=reset] {
     width: 100%;
     color: #fff;
     padding: 10px 0;
-    overflow: hidden; }
+    overflow: hidden;
+    display: block;
+    background-color: #f5f5f5; }
     .footer .footer_sub .footer_sub--block {
       width: 100%;
       /*.callcenter {
