--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,19 +3,22 @@
   <div class="container">
       <div class="row">
           <div class="footer_sub--block">
-              <div class="bottom-menu col-sm-12 col-md-6 col-md-push-6">
+              <!-- <div class="bottom-menu col-sm-12 col-md-6 col-md-push-6">
                   <ul>
                       <li>
                           <a href="/Home/TermAndCondition" title="นโยบายความปลอดภัย">นโยบายความปลอดภัย</a>
                       </li>
-                      <!-- -->
+                      
                       <li>
                           <a href="/Home/Disclaimer" title="คำสงวนสิทธิ์">คำสงวนสิทธิ์</a>
                       </li>
                   </ul>
-              </div>
-              <div class="copyright col-sm-12 col-md-6 col-md-pull-6">
-                  <p>© สงวนลิขสิทธิ์ 2561. บริษัทหลักทรัพย์จัดการกองทุน แลนด์ แอนด์ เฮ้าส์ จำกัด</p>
+              </div> -->
+              <div class="copyright mt-4">
+                    <h5>ต้องการสอบถามข้อมูล ติดต่อผ่ายทะเบียนกองทุนสำรองเลี้ยงชีพ
+                    <span>บลจ.แลนด์ แอนด์ เฮาส์ จำกัด</span>
+                    </h5>
+                    <p>Tel. 02-286-3484 ต่อ 335 - 336 หรือ E-mail : registrar_pvd@lhfund.co.th</p>
               </div>
           </div>
       </div>
