--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,10 @@
+
 <div id="header">
   <div class="top-menu-wrapper">
       <div class="wrapper">
           <div class="row">
               <div class="col-md-8 hidden-sm hidden-xs top-main-nav">
-                  <ul class="" id="top-main-nav">
+                  <!-- <ul class="" id="top-main-nav">
                       <li id="home">
                           <a href="/" title="หน้าหลัก">หน้าหลัก</a>
                       </li>
@@ -28,30 +29,33 @@
                       <li>
                           <a href="/Investment/TradingManual" title="ขั้นตอนการซื้อขายหน่วยลงทุน">ขั้นตอนการซื้อขายหน่วยลงทุน</a>
                       </li>
-                  </ul>
+                  </ul> -->
               </div>
               <div class="col-md-4 top-social-nav">
                   <ul class="">
                       <li class="ico-fb">
-                          <a href="#" title="facebook">
-                              <img src="/assets/Images/icons/ico-fb-white.png" />
+                          <a href="#" title="">
+                             บัญชีผู้ใช้: 
                           </a>
                       </li>
                       <li class="ico-line">
-                          <a href="#" title="line">
-                              <img src="/assets/Images/icons/ico-line-white.png" />
+                          <a href="#" title="">
+                              <img src="/assets/Images/icons/icon-login-white.png" />
+                              เนติวัฒน์
+                              <img src="/assets/Images/icons/p_dropdown_select.png" />
                           </a>
                       </li>
                       <li class="ico-yt">
-                          <a href="#" title="youtube">
-                              <img src="/assets/Images/icons/ico-yt-white.png" />
+                          <a href="#" title="">
+                              <img src="/assets/Images/icons/ico-forgot.png" />
+                              ออกจากระบบ
                           </a>
                       </li>
-                      <li class="ico-ig">
-                          <a href="#" title="instagram">
+                      <!-- <li class="ico-ig">
+                          <a href="#" title="">
                               <img src="/assets/Images/icons/ico-ig-white.png" />
                           </a>
-                      </li>
+                      </li> -->
                   </ul>
                   <ul class="sw-lang">
                       <li class="th current">
@@ -60,9 +64,9 @@
                       <li class="en">
                           <a href="#" title="Eng">Eng</a>
                       </li>
-                      <li class="ch">
+                      <!-- <li class="ch">
                           <a href="#" title="Chi">Chi</a>
-                      </li>
+                      </li> -->
                   </ul>
               </div>
           </div>
@@ -76,7 +80,7 @@
                   <h1 class="logo">
                       <a href="/">
                           <img src="/assets/Images/logos/logo.png" class="visible-lg-block" />
-                          <img src="/assets/Imag/assetsgos/logo-m.png" class="visible-md-block visible-sm-block visible-xs-block" />
+                          <img src="/assets/Images/logos/logo-m.png" class="visible-md-block visible-sm-block visible-xs-block" />
                       </a>
                   </h1>
               </div>
@@ -85,8 +89,8 @@
                   <nav id="main-nav" class="main-nav">
                       <div id="menu" class="main-nav-list hidden-sm hidden-xs">
                           <ul id="bottom-main-nav" >
-                              <li id="mutual"><a href="/MutualFund" title="My Port">My Port <span class="icon"></span></a></li>
-                              <li id="private"><a href="/PrivateFund" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
+                              <li id="mutual"><a routerLink="/myport" title="My Port">My Port <span class="icon"></span></a></li>
+                              <li id="private"><a routerLink="/transaction" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
                               <li id="provident"><a href="/ProvidentFund" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
                               <li id="property"><a href="/PropertyFund" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
                               <li id="investor"><a href="/Investment" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a>
