--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,5 +1,7 @@
-
-/* .top-menu-wrapper{
+/* .test {
+    color: red;
+}
+ .top-menu-wrapper{
     display: none !important;
 }
 .bottom-menu-wrapper{
