--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -697,9 +697,9 @@
 	</div>
 	<div class="clearfix"></div>
 	<div class="copyright .d-none .d-sm-block">
-		<p class="mt-5">ต้องการสอบถามข้อมูล ติดต่อผ่ายทะเบียนกองทุนสำรองเลี้ยงชีพ
+		<h5 class="mt-5">ต้องการสอบถามข้อมูล ติดต่อผ่ายทะเบียนกองทุนสำรองเลี้ยงชีพ
 			<span>บลจ.แลนด์ แอนด์ เฮาส์ จำกัด</span>
-		</p>
+		</h5>
 		<p>Tel. 02-286-3484 ต่อ 335 - 336 หรือ E-mail : registrar_pvd@lhfund.co.th</p>
 	</div>
 
@@ -726,6 +726,10 @@
 	<!-- #footer-wrapper -->
 
 	<!-- <canvas id="myChart" width="400" height="400"></canvas> -->
-	<div>
+	<!-- <div>
 		<canvas id="canvas">{{ myChart }}</canvas>
+	</div> -->
+
+	<div class="test">
+		<p>test</p>
 	</div>
