--- a/src/assets/Content/default/sass/_variables.scss
+++ b/src/assets/Content/default/sass/_variables.scss
@@ -50,9 +50,10 @@ $color-text: #5a5a5a;
 
 $color-white: #fff;
 $color-red: #C90A11;
-$color-blue: #293D69;
+$color-blue: #00698C;
 $color-green: #067169;
 $color-hover: #000;
+// $color-darkbrown: #595959;
 
 /* special theme */
 /* insert special theme for this website */
