--- a/src/app/myport/myport.component.html
+++ b/src/app/myport/myport.component.html
@@ -58,8 +58,8 @@
                                         <div class="select-wrapper inline-block">
                                                 <select name="ddlLink" id="ddlLink">
                                                     <option value="0" selected="">9990244757</option>
-                                                    <option value="36">36</option>
-                                                    <option value="29">29</option>
+                                                    <option value="36">9990244757</option>
+                                                    <option value="29">9990244757</option>
                                                 </select>
                                             </div>
                                     </div>
@@ -91,25 +91,35 @@
                                 </div>
                             </div>
                             <div class="fund-list-wrapper">
-                            <div class="row">
-                                <div class="col">
+                            <div class="row no-margin">
+                                <div class="col-md-6 col-xs-12 no-padding">
                                         <div class="title-heading">
-                                                <h3>มูลค่าทรัพย์สินสุทธ(บาท)</h3>
-                                                <h3>฿ 70,474,729.91</h3>
+                                            <div class="row">
+                                                <div class="col-md-2"><img src="/assets/Images/icons/ico-asset.png"></div>
+                                                <div class="col-md-6"><h3>มูลค่าทรัพย์สินสุทธ(บาท)</h3></div>
+                                                <div class="col-md-4"><h3>฿ 70,474,729.91</h3></div>
                                             </div>
+                                            
+                                                
+                                        </div>
                                 </div>
-                                <div class="col">
+                                <div class="col-md-6 col-xs-12 no-padding">
                                         <div class="title-heading-blue">
-                                                <h3>กำไร/ขาดทุน (บาท)</h3>
-                                                <h3>฿ 669,638.80</h3>
+                                            <div class="row">
+                                                    <div class="col-md-2"><img src="/assets/Images/icons/ico-income.png"></div>
+                                                    <div class="col-md-6"><h3>กำไร/ขาดทุน (บาท)</h3></div>
+                                                    <div class="col-md-4"><h3>฿ 669,638.80</h3></div>
+                                            </div>
+                                                
+                                                
                                             </div>
                                     </div>
                             </div>
                         </div>
 
                             
-                            <div class="row">                               
-                                    <div class="col">
+                            <div class="row no-margin">                               
+                                    <div class="col no-padding">
                                         <div class="table-responsive">
                                             <table class="table table-performance">
                                             <tbody>
@@ -217,7 +227,7 @@
                                         </table>   
                                          </div>
                                         </div>
-                                        <div class="col"> 
+                                        <div class="col no-padding"> 
                                             <div [chart]="chart"></div>
                                         </div>
                                  
