--- a/src/assets/Content/default/css/content/login.css
+++ b/src/assets/Content/default/css/content/login.css
@@ -28,18 +28,6 @@
   font-style: normal; }
 
 /* note : for IE8,7 need css3pie helper*/
-.top-menu-wrapper {
-  display: none !important; }
-
-.bottom-menu-wrapper {
-  display: none !important; }
-
-.footer_sub {
-  display: none !important; }
-
-#maincontainer-wrapper {
-  margin-top: 50px; }
-
 #main-wrapper {
   background-image: url("/assets/Images/banners/banner-login.png");
   width: 100%;
@@ -81,11 +69,13 @@
   .copyright h1, .copyright h2, .copyright h3, .copyright h4, .copyright h5, .copyright h6 {
     margin: 0 auto;
     margin-bottom: 15px;
+    font-size: 24px;
+    line-height: 24px;
     color: #5a5a5a; }
   .copyright p {
     margin: 0 auto;
     margin-bottom: 15px;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 24px;
     color: #5a5a5a; }
   .copyright span {
@@ -240,8 +230,8 @@
     .contact-wrapper .popup-content .btn-blue {
       position: relative;
       color: #fff;
-      border: 1px solid #293D69;
-      background-color: #293D69;
+      border: 1px solid #00698C;
+      background-color: #00698C;
       display: inline-block;
       vertical-align: middle;
       cursor: pointer;
@@ -370,8 +360,8 @@
     .contact-wrapper .popup-side-content-left .btn-blue {
       position: relative;
       color: #fff;
-      border: 1px solid #293D69;
-      background-color: #293D69;
+      border: 1px solid #00698C;
+      background-color: #00698C;
       display: inline-block;
       vertical-align: middle;
       cursor: pointer;
