--- a/src/assets/Content/default/sass/_global.scss
+++ b/src/assets/Content/default/sass/_global.scss
@@ -43,6 +43,26 @@ if it's not present, don't show loader */
     min-width: $page-oldbrowser-width;
   }
 }
+.no-margin{
+    margin-right: 0px;
+    margin-left: 0px;
+}
+.no-padding{
+    padding-right: 0px;
+    padding-left: 0px;
+}
+.width50{
+    width: 50% !important;
+}
+.bg-blue{
+    background-color: $color-blue !important;
+}
+.bg-primary{
+    background-color: $color-primary !important;
+}
+.bg-darkbrown{
+    background-color: $color-text !important;
+}
 
 #header-wrapper {
     width: 100%;
@@ -136,17 +156,19 @@ select {
     border: 1px solid #ccc;
     @include round-corner(0);
     font-size: $text-content;
-    color: $color-text;
+    color: $color-primary;
+    
     outline: none;
 }
 
 select {
-    /*margin-bottom: 15px;*/
-    background-image: url('/assets/Images/icons/p_dropdown_black.png');
+    margin-bottom: 15px;
+    background-image: url('/assets/Images/icons/ico-arrow-down-green.png');
     background-repeat: no-repeat;
     background-position: center right 10px;
     background-position-y: center;
     background-position-x: calc(100% - 15px);
+    background-color: #f5f5f5;
 }
 
 input[type=button],
@@ -204,6 +226,17 @@ input[type=reset] {
             background-color: $color-hover;
         }
     }   
+    &.btn-cancel {
+        position: relative;
+        color: $color-white;
+        border: 1px solid $color-secondary;
+        background-color: $color-red;
+
+        &:hover {
+            border: 1px solid $color-hover;
+            background-color: $color-hover;
+        }
+    } 
 
     &.btn-light {
         position: relative;
@@ -520,6 +553,8 @@ input[type=reset] {
                 border-collapse: separate;
                 border-spacing: 4px;
 
+                
+
                 > tr {
                     > th {
                         font-size: 24px;
@@ -567,6 +602,24 @@ input[type=reset] {
                             &:hover {
                                 color: $color-hover;
                                 text-decoration: none;
+                            }
+                        }
+                    }
+                    &.captions {
+                        > td {
+                            padding: 20px 20px 10px 20px;
+                            text-align: left;
+
+                            h3 {
+                                margin: 0;
+                                font-size: $text-small;
+                                line-height: $text-small;
+                                color: $color-primary;
+                            }
+
+                            p {
+                                margin: 0;
+                                color: $color-primary;
                             }
                         }
                     }
