--- a/src/assets/Content/default/sass/content/login.scss
+++ b/src/assets/Content/default/sass/content/login.scss
@@ -2,18 +2,22 @@
 @import "../helpers/fontface";
 @import "../helpers/mixin_css3";
 
-.top-menu-wrapper{
-    display: none !important;
-}
-.bottom-menu-wrapper{
-    display: none !important;
-}
-.footer_sub{
-    display: none !important;
-}
+// body{
+//     background-color: #000;
+// }
+
+// .top-menu-wrapper{
+//     display: none !important;
+// }
+// .bottom-menu-wrapper{
+//     display: none !important;
+// }
+// .footer_sub{
+//     display: none !important;
+// }
 
 #maincontainer-wrapper{
-    margin-top: 50px;
+    // margin-top: 50px;
 }
 #main-wrapper{
     background-image: url("/assets/Images/banners/banner-login.png");
@@ -56,12 +60,15 @@
     h1, h2, h3, h4, h5, h6 {
         margin: 0 auto;
         margin-bottom: 15px;
+        font-size: $text-x-small;
+        line-height: $text-x-small;
         color: $color-text;
+
     }
     p {
         margin: 0 auto;
         margin-bottom: 15px;
-        font-size: $text-x-small;
+        font-size: $base-fontsize;
         line-height: $text-x-small;
         color: $color-text;
     }
