--- a/src/assets/Content/default/sass/layout/_header.scss
+++ b/src/assets/Content/default/sass/layout/_header.scss
@@ -595,8 +595,8 @@
         padding: 0;
         margin: 0;
         border-bottom: 5px solid $color-primary;
-        //background-color: $color-white;
-        background-color: rgba(255,255,255,0.8);
+        background-color: $color-white;
+        // background-color: rgba(255,255,255,0.8);
         -webkit-box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.5);
         box-shadow: 0px 5px 5px -5px rgba(0,0,0,0.5);
 
